# warehouse-optimizer

./: .gitignore  notes.md  pyproject.toml
notebooks/: data_wrangling.ipynb
src/warehouse_optimizer/: __init__.py
src/warehouse_optimizer/configs/: configs.py
src/warehouse_optimizer/data_engineering/ingest/: ingest_kaggle.py
src/warehouse_optimizer/helpers/: source.py
